--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@ permalink: /404.html
 ---
 
 <div id="whoops">
-    <h1>Whoops! 404</h1>
-    <h2>You may go back to <a href="{{ '/' | relative_url }}"> homepage <i class="fa fa-home"></i></a></h2>
+    <h1 style="color:white;">Whoops! 404</h1>
+    <h2 style="color:white;">You may go back to the <a href="{{ '/' | relative_url }}"> homepage <i class="fa fa-home"></i></a></h2>
 </div>
