--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@ permalink: /404.html
 ---
 
 <div id="whoops">
-    <h1 style="color:white; font-size:50px;">Whoops! 404</h1>
-    <h1 style="color:white;">You may go back to the <a href="{{ '/' | relative_url }}"> homepage <i class="fa fa-home"></i></a></h2>
+    <h1 style="color:white; font-size:40px;">Whoops! 404</h1>
+    <h1 style="color:white; font-size:40px;">You may go to the <a href="{{ '/' | relative_url }}"> homepage <i class="fa fa-home"></i></a> or you may listen to some amazing <a href="https://www.youtube.com/@RammsteinOfficial">Rammstein songs</a>
+ </h2>
 </div>
