--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: /404.html
 <div id="whoops">
     <h1 style="color:white; font-size:40px;">Whoops! 404</h1>
     <h1 style="color:white; font-size:40px;">You may go to the <a href="{{ '/' | relative_url }}"> homepage <i class="fa fa-home"></i></a></h1>
-    <h1 style="color:white; font-size:40px;">or you may listen to some amazing <a href="https://www.youtube.com/@RammsteinOfficial">Rammstein songs <i class="fa fa-music"></i></a></h1>
+    <h1 style="color:white; font-size:40px;">or you may listen to amazing <a href="https://www.youtube.com/@RammsteinOfficial">Rammstein songs <i class="fa fa-music"></i></a></h1>
 </div>
