--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@ layout: default
           {% for social in my.social %}
             <li><a href="{{ social.link }}"><i class=" {{ social.icon-class }}"></i></a></li>
           {% endfor %}
-          <p> <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </p>
+          <h3> <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </h3>
         </ul>
     </section>
 
