--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@ layout: default
           {% for social in my.social %}
             <li><a href="{{ social.link }}"><i class=" {{ social.icon-class }}"></i></a></li>
           {% endfor %}
-          <h3><i class="fa-brands fa-researchgate"></i> <a href="https://www.w3schools.com">Visit W3Schools.com!</a> </h3>
+          <h3> <a href="https://www.w3schools.com"><i class="fa-brands fa-researchgate"></i> Visit W3Schools.com!</a> </h3>
         </ul>
     </section>
 
