--- a/about/index.html
+++ b/about/index.html
@@ -35,10 +35,13 @@ layout: default
     <section id="findme">
         <h2>FIND ME ON</h2>
         <ul>
+          <!--  
           {% for social in my.social %}
             <li><a href="{{ social.link }}"><i class=" {{ social.icon-class }}"></i></a></li>
           {% endfor %}
-          <h3> <a href="https://www.w3schools.com"><i class="fa-brands fa-researchgate"></i> Visit W3Schools.com!</a> </h3>
+          -->
+          <li><h2> <a href="https://github.com/fatihidiz"><i class="fa-brands fa-square-github"></i> GitHub</a> </h2></li>
+          <li><h2> <a href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </h2></li>
         </ul>
     </section>
 
