--- a/about/index.html
+++ b/about/index.html
@@ -40,8 +40,9 @@ layout: default
             <li><a href="{{ social.link }}"><i class=" {{ social.icon-class }}"></i></a></li>
           {% endfor %}
           -->
-          <li><p style="font-size:30px;"> <a href="https://github.com/fatihidiz"><i class="fa-brands fa-square-github"></i> GitHub</a> </p></li>
-          <li><p style="font-size:40px;"> <a href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </p></li>
+          <li><p style="font-size:35px;"> <a href="https://github.com/fatihidiz"><i class="fa-brands fa-square-github"></i> GitHub</a> </p></li>
+          <li><p style="font-size:35px;"> <a href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </p></li>
+          <li> <a href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </li>
         </ul>
     </section>
 
