--- a/about/index.html
+++ b/about/index.html
@@ -43,6 +43,7 @@ layout: default
           <li><p style="font-size:35px; line-height:10px;"> <a href="https://github.com/fatihidiz"><i class="fa-brands fa-square-github"></i> GitHub</a> </p></li>
           <li><p style="font-size:35px; line-height:10px;"> <a href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </p></li>
           <li> <a href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </li>
+          <li> <a href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </li>
         </ul>
     </section>
 
