--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@ layout: default
 
     <section id="findme">
         <h2>FIND ME ON</h2>
-        <ul>
+        <ul style="font-size:35px; line-height:1px;">
           <!--  
           {% for social in my.social %}
             <li><a href="{{ social.link }}"><i class=" {{ social.icon-class }}"></i></a></li>
