--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@ layout: default
           <li><p style="font-size:35px; line-height:1px;"> <a href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </p></li>
           -->
           <li> <a style="font-size:35px; line-height:10px;" href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </li><br>
-          <li> <a style="font-size:35px; line-height:10px;" href="https://www.researchgate.net/profile/Fatih_Idiz"><i class="fa-brands fa-researchgate"></i> ResearchGate</a> </li>
+          <li> <a style="font-size:35px; line-height:10px;" href="https://github.com/fatihidiz"><i class="fa-brands fa-square-github"></i> GitHub</a> </li>
         </ul>
     </section>
 
